logs/rovio/build.make.037.log
[  0%] Built target geometry_msgs_generate_messages_lisp
[  0%] Built target std_msgs_generate_messages_lisp
[  0%] [ 41%] Built target rovio
Built target std_msgs_generate_messages_cpp
[ 41%] [ 41%] [ 41%] Built target geometry_msgs_generate_messages_cpp
Built target geometry_msgs_generate_messages_py
Built target _rovio_generate_messages_check_deps_SrvResetToPose
[ 41%] Built target std_msgs_generate_messages_py
[35m[1mScanning dependencies of target rovio_rosbag_loader
[ 50%] [0mBuilt target rovio_node
[ 58%] [ 66%] Built target rovio_generate_messages_lisp
Built target feature_tracker_node
[ 75%] [ 83%] Built target rovio_generate_messages_cpp
[32mBuilding CXX object CMakeFiles/rovio_rosbag_loader.dir/src/rovio_rosbag_loader.cpp.o
[0m[100%] Built target rovio_generate_messages_py
[100%] Built target rovio_generate_messages
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp: In function ‘int main(int, char**)’:
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:303:27: error: ‘lastSafeTime’ was not declared in this scope
         lastTriggerTime = lastSafeTime;
                           ^
/home/lyw/catkin_rovio/src/rovio/src/rovio_rosbag_loader.cpp:306:30: error: ‘lastSafeTime’ was not declared in this scope
       if(resetTrigger>0.0 && lastSafeTime - lastTriggerTime > resetTrigger){
                              ^
make[2]: *** [CMakeFiles/rovio_rosbag_loader.dir/src/rovio_rosbag_loader.cpp.o] Error 1
make[1]: *** [CMakeFiles/rovio_rosbag_loader.dir/all] Error 2
make: *** [all] Error 2
